(suggested by Michael Adams).
Bugfix: A double-click which starts on one file and ends on another is now
	ignored (reported by Michael Adams).
Bugfix: Test for valid sort-type in SOAP call was reserved, so you couldn't set
	the sort type (reported by Damjan Bole).
Bugfix: Using a SOAP call to open a non-existant directory made the filer
	crash.

22-Feb-2003
~~~~~~~~~~~
Make Size toolbar icon only set the size. Use a second button to set automatic
mode.

13-Feb-2003
~~~~~~~~~~~
Updated Spanish translation (Marcelo Ramos).
Alpha blended pinboard icons now get clipped correctly even with GTK+-2.0.

12-Feb-2003
~~~~~~~~~~~
Fixed some spelling errors (Marcelo Ramos).
Select the current style by default when opening the Set Backdrop box
(reported by Marcelo Ramos).
Fix problems with pinboard drawing of semi-transparent icons (fixed for
GTK+-2.2 only).

11-Feb-2003
~~~~~~~~~~~
Merged Set Run Action, Set Icon and Set Backdrop dropboxes into a single
Ultimate DropBox widget, and made all three interfaces much nicer.
Dragging to the Home and Up toolbar tools now supports the menu-on-drag
option (reported by Laurent Moussault).
Allow changing the pinboard style without having to drag the image back in
(requested by Jesse Wagner).
Remove button style from iconified windows. Use a semi-transparent border
instead. The actual effect is flexible; perhaps someone with artistic
talent can do something better?
Double-buffer small pinboard updates.
Updated Spanish translation (Marcelo Ramos).

10-Feb-2003
~~~~~~~~~~~
Option to turn off column headings in List View (Adam Sampson).
Panel auto-raising also works during drag-and-drop.
Bugfix: Installing to /usr put the MIME files in the wrong place (reported
	by Albert Wagner).

09-Feb-2003
~~~~~~~~~~~
Allow dragging to a selected directory as long as it's not the source of the
drag.
If an error occurs opening a directory then don't report it in an error box if
a drag-and-drop operation is in progress.