@@ -12,6 +12,7 @@ Bugfix: Test for valid sort-type in SOAP call was reserved, so you couldn't set
 	the sort type (reported by Damjan Bole).
 Bugfix: Using a SOAP call to open a non-existant directory made the filer
 	crash.
+Bugfix: Drag-and-drop raising on the panel didn't quite work (Daniele Peri).
 
 22-Feb-2003
 ~~~~~~~~~~~
